--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-:root {
+@import 'bootstrap';
+
+body {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
